# memorylake-client

./: .env.example  .flake8  .gitignore  .shellcheckrc  NOTICE  README.md  codecov.yml  pyproject.toml  requirements.txt
.cursor/rules/: general.mdc  python-code-style.mdc
.github/workflows/: ci.yml  pypi.yml
cicd/: bump-version.py  check-all-locally.sh  check-basedpyright.sh  check-codespell.sh  check-flake8.sh  check-isort.sh  check-package-version-consistency.py  check-python-code.py  check-shell.sh  codespell-custom-dictionary.txt  common.bashrc  format.sh  test-all.sh
example/: async_chat_remote.py  chat.py  chat_remote.py
memorylake/: __init__.py  _version.py  async_memorylake_memorytool.py  client.py  memorylake_memorytool.py  memorytool.py
memorylake/mem0/: __init__.py  exceptions.py
memorylake/mem0/client/: main.py  project.py  utils.py
memorylake/mem0/extend/: main.py  management.py
memorylake/mem0/memory/: setup.py  telemetry.py
memorylake/test/: test_client.py  test_memorylake_integration.py  test_memorylake_remote.py  test_memorytool_local.py  test_version.py
